[omnibox] Fix color on keyword hint view chip label & container

The keyword hint view had a chip container with "Tab" label,
and the background color assigned was incorrectly conditioned
on whether the popup is open.  This hint doesn't show when
omnibox is unfocused, and only OmniboxPart::RESULTS_BACKGROUND
gives the correct color so it is used directly instead of logic.

Bug: 879935
Change-Id: I29b157054c30f6ef72d44169ef1539dfd0bfc9a5
Reviewed-on: https://chromium-review.googlesource.com/1211963
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589579}
Former-commit-id: 91e0b5da4fd6efc306339ecffaf9429accd483ab